syntax = "proto3";

package protos;

service RemoteExec {
    rpc GetIP(Dummy) returns (CmdResult) {}
    rpc GetFileContent(FilePath) returns (CmdResult) {}
    rpc ExecuteCommand(Command) returns (CmdResult) {}
    rpc AddTunnel(Tunnel) returns (CmdResult) {}
    rpc DeleteTunnel(Tunnel) returns (CmdResult) {}
    rpc ServiceRunning(Service) returns (IsRunning) {}
}

message CmdResult {
    string Result = 1;
  }

message FilePath {
    string Path = 1;
  }

message Command {
    string Cmd = 1;
  }

message Tunnel {
    int32   HostPort = 1;
    int32   VMPort = 2;
    string  Username = 3;
    string  Address = 4;
  }

message Service {
  string  Address = 1;
  int32   Port = 2;
  string  Protocol = 3;
}

message IsRunning {
  bool Result = 1;
}

message Dummy {
    string Dummy = 1;
  }